2010-05-09  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/web/token.rb: defined add-on.

	* lib/gluon/web/error.rb: defined add-on.

	* lib/gluon/application.rb, lib/gluon/controller.rb: add-on hooks.

	* lib/gluon/rs.rb: fixed a bug of logging.

2010-03-01  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb, lib/gluon/controller.rb: timing of
	passing `path_args' is changed. `path_args' is passed to
	`page_start' of first hook. `page_request' hook takes no arguments
	and default empty `request_GET' hook is defined. in many cases,
	`request_GET' hook may be omitted because it is verbose.

	* lib/gluon/controller.rb: simple syntax is defined for
	`page_view', `page_encoding', `page_template'.

	* lib/gluon/validation.rb: string copy on changing encoding of
	form value.

2010-02-27  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/setup.rb: unit test driver is added to setup runtime.

	* lib/gluon/application.rb: content-type of ascii-8bit encoding is
	application/octet-stream.

	* EXAMPLE: updated for `.local_ruby_env'.

	* bin/gluon_local: obsoleted.

2010-02-25  TOKI Yoshinori  <toki@freedom.ne.jp>

	* Rakefile, test/Rakefile: `.local_ruby_env' used.

	* .local_ruby_env: portable rake rules for project local RubyGems
	environemnt.

2009-12-20  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: easy string pattern for
	`gluon_path_match'.

2009-12-19  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: `gluon_path_filter' ->
	`gluon_path_match'.

2009-12-18  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/memoize.rb: closure cache at Gluon::SingleMemoization.

2009-10-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: controller base is not module but
	class.

2009-10-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: meta-info implementation is separated
	from controller module.

2009-10-01  TOKI Yoshinori  <toki@freedom.ne.jp>

	* Rakefile: gemspec dependency.
