@@ -1,3 +1,8 @@
+2010-05-13  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/application.rb: logging for non StandardError
+	exception.
+
 2010-05-09  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/web/token.rb: defined add-on.
